# SafeTrace

./: .gitignore  .gitmodules  CONTRIBUTE.md  LICENSE  README.md  front end user story  last_14d_visits.py
UIcode/: .env.development  .env.example  README.md  package-lock.json  package.json
UIcode/client/: .env.example  package-lock.json  package.json
UIcode/client/src/: App.css  App.js  routes.js
UIcode/client/src/App/: index.jsx
UIcode/client/src/Components/Common/Button/: index.jsx
UIcode/client/src/Components/DatePicker/: index.jsx
UIcode/client/src/Components/FileUpload/: index.jsx.js
UIcode/client/src/Components/Grid/: Col.jsx  Row.jsx
UIcode/client/src/Components/Header/: index.jsx
UIcode/client/src/Components/LoginLogoutButton/: index.jsx
UIcode/client/src/Components/RadioGroup/: index.jsx
UIcode/client/src/Layouts/Default/: index.jsx
UIcode/client/src/Pages/Contribute/: Step1.jsx  Step2.jsx  Step3.jsx  index.jsx
UIcode/client/src/Providers/: AuthProvider.jsx
UIcode/client/src/Services/: api.js  auth.js  enclave.js
UIcode/client/src/Styled/: Li.jsx  ListItemButton.jsx  NavLink.js
UIcode/client/src/Theme/: colors.js
UIcode/client/src/components/: API.js  header.js  home.js  signin.js  signout.js
UIcode/public/uploads/: Wireframe.docx
UIcode/src/: custom.css  index.js
UIcode/src/App/: App.css  index.jsx
UIcode/src/Components/Common/Button/: index.jsx
UIcode/src/Components/Common/EmailInput/: index.jsx
UIcode/src/Components/Common/PasswordInput/: index.jsx
UIcode/src/Components/Common/TextInput/: index.jsx
UIcode/src/Components/DatePicker/: index.jsx  style.css
UIcode/src/Components/FlashMessage/: Flash.jsx  index.jsx
UIcode/src/Components/Grid/: Col.jsx  Hr.jsx  Row.jsx
UIcode/src/Components/Header/: index.jsx
UIcode/src/Components/LoginLogoutButton/: index.jsx
UIcode/src/Components/SignUpForm/: index.jsx
UIcode/src/FlashMessage/: index.jsx
UIcode/src/Layouts/Default/: index.jsx
UIcode/src/Pages/API/: index.jsx
UIcode/src/Pages/Contribute/: Step1.jsx  Step2.jsx  Step3.jsx  index.jsx
UIcode/src/Pages/Home/: index.jsx
UIcode/src/Pages/Results/: ResultsTable.jsx  index.jsx
UIcode/src/Sections/Authorized/: index.jsx
UIcode/src/Sections/LoginForm/: index.jsx
UIcode/src/Services/: api.js  enclave.js  geocode.js  parser.js
UIcode/src/Styled/: Box.jsx  ErrorMessage.jsx  NavLink.js  Ul.jsx
UIcode/src/Theme/: colors.js
UIcode/src/Utils/: array.js  validation.js
api-server/: README.md  index.js  package.json
backend/: README.md  docker-compose.yml
backend/app/: .env  Dockerfile  google.html  nodemon.json  package-lock.json  package.json  server.js
backend/app/config/: config.js
backend/app/helpers/: crypto.js
backend/app/middleware/: auth-general.js  auth.js  google_auth.js
backend/app/models/: report.js  user.js
backend/app/routes/: report.js  user.js
client/: README.md  data.js  index.js  package-lock.json  package.json
client/scripts/: last_14d_visits.js
docs/: about-sgx.md
docs/ibm-docs/: API-docs.md
docs/ux/: Front-end-user-story.md
enclave/: INSTALL.md  README.md
enclave/enigma-types/: Cargo.toml  build.rs
enclave/enigma-types/src/: hash.rs  lib.rs  types.rs
enclave/hello-rust/: Makefile
enclave/hello-rust/app/: Cargo.toml  Enclave_u.c  Enclave_u.h
enclave/hello-rust/enclave/: Cargo.toml  Enclave_t.c  Enclave_t.h  Makefile  Xargo.toml
enclave/safetrace/: Makefile
enclave/safetrace/app/: Cargo.toml
enclave/safetrace/app/src/: keys_u.rs  lib.rs  main.rs  ocalls_u.rs
enclave/safetrace/app/src/common_u/: errors.rs
enclave/safetrace/app/src/enigma_types/: traits.rs  types.rs
enclave/safetrace/app/src/esgx/: equote.rs  general.rs  mod.rs
enclave/safetrace/app/src/networking/: ipc_listener.rs  messages.rs  mod.rs
enclave/safetrace/enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl  Makefile
enclave/safetrace/enclave/src/: auto_ffi.rs  data.rs  errors_t.rs  hash.rs  keys_t.rs  lib.rs  macros.rs  storage.rs  traits.rs  types.rs
