[package]
name = "safetrace-enclave"
version = "1.0.0"
authors = ["Enigma MPC"]

[lib]
name = "safetraceenclave"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_rand = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tseal = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[dependencies]
arrayvec = { version = "0.4.10", default-features = false }
rustc-hex = { version = "2.0.1", default-features = false }
serde = { git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
libsecp256k1 = { version = "0.2" }
lazy_static = {version = "1.3.0", features = ["spin_no_std"] }
tiny-keccak = { version = "1.4" }
sha2 = { version = "0.8.0", default-features = false}
ring = { git = "https://github.com/elichai/ring.git", rev = "sgx-manual", default-features = false }


[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_alloc = { path = "../../incubator-teaclave-sgx-sdk/sgx_alloc" }
sgx_build_helper = { path = "../../incubator-teaclave-sgx-sdk/sgx_build_helper" }
sgx_cov = { path = "../../incubator-teaclave-sgx-sdk/sgx_cov" }
sgx_crypto_helper = { path = "../../incubator-teaclave-sgx-sdk/sgx_crypto_helper" }
sgx_libc = { path = "../../incubator-teaclave-sgx-sdk/sgx_libc" }
sgx_rand = { path = "../../incubator-teaclave-sgx-sdk/sgx_rand" }
sgx_rand_derive = { path = "../../incubator-teaclave-sgx-sdk/sgx_rand_derive" }
sgx_serialize = { path = "../../incubator-teaclave-sgx-sdk/sgx_serialize" }
sgx_serialize_derive = { path = "../../incubator-teaclave-sgx-sdk/sgx_serialize_derive" }
sgx_serialize_derive_internals = { path = "../../incubator-teaclave-sgx-sdk/sgx_serialize_derive_internals" }
sgx_tcrypto = { path = "../../incubator-teaclave-sgx-sdk/sgx_tcrypto" }
sgx_tcrypto_helper = { path = "../../incubator-teaclave-sgx-sdk/sgx_tcrypto_helper" }
sgx_tdh = { path = "../../incubator-teaclave-sgx-sdk/sgx_tdh" }
sgx_tkey_exchange = { path = "../../incubator-teaclave-sgx-sdk/sgx_tkey_exchange" }
sgx_tprotected_fs = { path = "../../incubator-teaclave-sgx-sdk/sgx_tprotected_fs" }
sgx_trts = { path = "../../incubator-teaclave-sgx-sdk/sgx_trts" }
sgx_tse = { path = "../../incubator-teaclave-sgx-sdk/sgx_tse" }
sgx_tseal = { path = "../../incubator-teaclave-sgx-sdk/sgx_tseal" }
sgx_tstd = { path = "../../incubator-teaclave-sgx-sdk/sgx_tstd" }
sgx_tunittest = { path = "../../incubator-teaclave-sgx-sdk/sgx_tunittest" }
sgx_types = { path = "../../incubator-teaclave-sgx-sdk/sgx_types" }
sgx_ucrypto = { path = "../../incubator-teaclave-sgx-sdk/sgx_ucrypto" }
sgx_unwind = { path = "../../incubator-teaclave-sgx-sdk/sgx_unwind" }
sgx_urts = { path = "../../incubator-teaclave-sgx-sdk/sgx_urts" }
