[package]
name = "safetrace-enclave"
version = "1.0.0"
authors = ["Enigma MPC"]
edition = "2018"

[lib]
name = "safetraceenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
enigma-types = { git = "https://github.com/enigmampc/enigma-core.git", branch="develop", default-features = false, features = ["sgx"] }
enigma-crypto = { git = "https://github.com/enigmampc/enigma-core.git", branch="develop", default-features = false, features = ["sgx", "asymmetric"] }
enigma-tools-t = { git = "https://github.com/enigmampc/enigma-core.git", branch="develop" }
enigma-tools-m = { git = "https://github.com/enigmampc/enigma-core.git", branch="develop", default-features = false, features = ["sgx"] }
enigma-runtime-t = { git = "https://github.com/enigmampc/enigma-core.git", branch="develop" }

serde = { git = "https://github.com/mesalock-linux/serde-sgx.git", rev = "sgx_1.0.9", features=["serde_derive"] }
serde_json = { git = "https://github.com/enigmampc/serde-json-sgx.git", rev = "1.0.39-sgx-1.0.9" }
rmp-serde = {git = "https://github.com/enigmampc/msgpack-rust.git", rev =  "0.14.0-sgx-1.0.9" }
lazy_static = {version = "1.4.0", features = ["spin_no_std"] }

sgx_types = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.9" }
sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.9" }
sgx_trts = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.9" }
sgx_rand = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.9" }
sgx_tseal = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.9" }
